Fixed Overflow Scroll to Auto in Side Menu and Content

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -110,12 +110,12 @@ body{
     border-radius: 20px;
     width: 35px;
 }
-.page .topBar .sideMenu {
+.page .topBar .sideMenu{
     display: flex;
     flex-wrap: wrap;
     width: 20%;
-    overflow: scroll;
-
+    height: 100%;
+    overflow: auto;
 }
 .page .topBar .sideMenu .menuTitle{
     width: 100%;
@@ -129,7 +129,7 @@ body{
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    margin-top: -65px;
+    margin-top: -40px;
 }
 .page .topBar .sideMenu .menuTabs .menuTab{
     display: flex;
@@ -219,6 +219,7 @@ body{
     flex-wrap: wrap;
     width: 80%;
     background: #f5f5f5;
+    overflow: auto;
 }
 .page .topBar .content .subHeader{
     width: 100%;
@@ -265,13 +266,15 @@ body{
     content:"";
     margin: 0;
 }
+.page .content{
+    height: 100%;
+    overflow: scroll;
+}
 .page .content .mainContent{
     display: flex;
     flex-wrap: wrap;
     width: 100%;
     margin: 0;
-    height: 600px;
-    overflow: scroll;
 }
 .page .content .mainContent .summary{
     display: flex;
